chore: set basic style and refactor db consumer

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+body{
+  font-family: "Space Grotesk", sans-serif;
+  overflow-x: hidden;
+}
+
+:root{
+  --orange: #f5941D;
+}
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
