--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,6 @@ h1{
 a{
   text-decoration: none;
   color: inherit;
-  width: 100%;
   color: var(--purple);
 }
 .search__result{
@@ -25,3 +24,7 @@ a{
   width: 100%;
 }
 
+.searchComponent{
+  margin-top: 2em;
+  gap: 2em;
+}
