--- a/src/styles/professional.css
+++ b/src/styles/professional.css
@@ -1,7 +1,7 @@
 .professional__photo{
     max-height: 400px;
     overflow: hidden;
-    max-width: 100vw;
+    max-width: 400px;
     justify-content: center;
     display: flex;
     align-items: center;
@@ -9,7 +9,8 @@
 }
 
 .professional__photo img{
-    width: 100%;
+    min-height: 400px;
+    width: auto;
 }
 
 .professional__image{
