--- a/src/styles/professional.css
+++ b/src/styles/professional.css
@@ -9,8 +9,8 @@
 }
 
 .professional__photo img{
-    min-height: 400px;
-    width: auto;
+    min-width: 400px;
+    height: auto;
 }
 
 .professional__image{
