feat: handle with professional background

--- a/src/styles/professional.css
+++ b/src/styles/professional.css
@@ -1,15 +1,16 @@
 .professional__photo{
     max-height: 400px;
     overflow: hidden;
-    max-width: 400px;
+    max-width: 80vw;
     justify-content: center;
     display: flex;
     align-items: center;
     border-radius: 10px;
+    width: 100%;
 }
 
 .professional__photo img{
-    min-width: 400px;
+    min-width: 200px;
     height: auto;
 }
 
@@ -29,7 +30,11 @@
 .professional__chips .MuiChip-root{
     margin-right: .5em;
 }
-
+.professional__information{
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0px 1px 13px 1px rgba(0,0,0,0.05);
+}
 .professional__details p{
     display: flex;
     align-items: center;
