--- a/src/styles/professional.css
+++ b/src/styles/professional.css
@@ -15,13 +15,22 @@
 }
 
 .professional__image{
-    width: calc(100% - 3em);
-    height: 200px;
+    width: 150px;
+    height: 150px;
     border-radius: 10px;
     overflow: hidden;
-    display: flex;align-items: center;
+    display: flex;
+    align-items: start;
     justify-content: center;
-    margin: 1em;
+    margin: 1em auto;
+    /* margin: 1em; */
+    overflow: hidden;
+    
+}
+
+.professional__image img{
+    height: auto;
+    width: 100%;
 }
 
 .professional__chips .MuiChip-root{
