--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -16,6 +16,15 @@
 .footer__socialMedia h4{
     margin: .5em 0;
 }
+.footer a{
+    color: white;
+    text-decoration: underline;
+    margin: .5em;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: .5em;
+}
 .footer__socialMedia a{
     color: white;
     text-decoration: underline;
