fix: margens e texto no botao de cadastro

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -40,6 +40,10 @@
 }
 
 @media (max-width: 700px) {
+    .footer{
+        /* position: sticky;
+        bottom: 0; */
+    }
     .footer__brand, .footer__socialMedia, .footer__partners, .footer__partners div{
         width: 100%;
     }
