--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -41,10 +41,10 @@
 
 @media (max-width: 700px) {
     .footer{
-        /* position: sticky;
-        bottom: 0; */
+        display: none !important;
     }
-    .footer__brand, .footer__socialMedia, .footer__partners, .footer__partners div{
+    .footer__brand, .footer__socialMedia, 
+    .footer__partners, .footer__partners div{
         width: 100%;
     }
     .footer__partners {
