feat: baixar carteirinha de assinante logada

--- a/src/index.css
+++ b/src/index.css
@@ -35,8 +35,9 @@ a{
 }
 
 .searchComponent{
-  margin: 2em auto;
-  gap: 2em;
+  /* margin-top: 2em; */
+  /* margin: 2em auto; */
+  /* gap: 2em; */
 }
 
 .single_line_ellipsis {
